Fix header z-index and adjust about-us margin for small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ header {
    background-color: #5c6956;
    position: fixed;
    top: 0;
+   z-index:10;
 }
 
 #logo {
@@ -97,7 +98,7 @@ header {
 }
 
 #hero-image {
-   height: 300px;
+   height: 400px;
    width: 100%;
    background: url("../images/hero-image.jpg") no-repeat center center;
    background-size: cover;
@@ -109,7 +110,7 @@ header {
    width: 90%;
    position: absolute;
    left: 20px;
-   margin-top: 20px;
+   margin-top: 70px;
 }
 
 #about-us h2 {
@@ -121,6 +122,7 @@ header {
    background-color: rgba(0, 0, 0, 0.5);
    width: inherit;
    height: inherit;
+   margin-top:70px;
 }
 
 #about-us p {
